--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -52,25 +52,27 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ontology<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#ontonew">New</a></li>
-              <li><a href="unimplemented/">Load</a></li>
+              <li><a href="#ontoload">Load</a></li>
               <li class="divider"></li>
-              <li><a href="unimplemented/">Include</a></li>
+              <li><a href="unimplemented/">Import Data Into Ontology</a></li>
               <li class="divider"></li>
-              <li><a href="unimplemented/">Save</a></li>
-              <li><a href="unimplemented/">Export</a></li>
+              <li><a href="unimplemented/">Export Data</a></li>
+              <li><a href="unimplemented/">Export Classifier</a></li>
             </ul>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="./">Visualize Ontology</a></li>
-            <li><a href="notimplemented/">Visualize Concepts</a></li>
             <li><a href="notimplemented/">Documents</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
-      <!-- OntoView Grid: Small left side for Concepts, larger right side for Ontology -->
+      <!-- OntoView Grid: 
+      Small left side for Concepts, larger right side for Ontology 
+      -->
       <div class="row" id="ontoview" style="display: none">
-        <div class="col-md-4"> <!-- concept columns -->
+        <!-- concept sidebar columns -->
+        <div class="col-md-4" id="sidebar"> 
           <!-- concept tree panel --> 
           <div class="panel panel-default"> 
             <div class="panel-heading">
@@ -78,9 +80,9 @@
             </div>
             <div class="panel-footer">
               <div class="btn-group menu-control">
-                <button type="button" class="btn btn-default btn-sm">New</button>
-                <button type="button" class="btn btn-default btn-sm">Move</button>
-                <button type="button" class="btn btn-default btn-sm">Delete</button>
+                <button type="button" id="newconcept" class="btn btn-primary btn-sm">New</button>
+                <button type="button" id="moveconcept" class="btn btn-warning btn-sm">Move</button>
+                <button type="buttonr" id="deleteconcept" class="btn btn-danger btn-sm">Delete</button>
               </div>
             </div>
             <div class="panel-body">
@@ -128,6 +130,27 @@
             </div> <!-- /panel body -->
           </div> <!-- /concept properties panel -->
         </div> 
+        <! --
+        DELETE MODAL
+        --> 
+        <div class="modal fade" id="delete-modal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Delete Concept</h4>
+              </div>
+              <div class="modal-body">
+                <p class="text-warning" >Keep the transitive relations through this concept?</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" id="keep-delete-confirm" class="btn btn-danger">Yes</button>
+                <button type="button" id="delete-confirm" class="btn btn-danger">No</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
       </div> <!-- / end of sidebar -->
 
         <! -- 
@@ -138,14 +161,14 @@
             <div class="panel-heading">
               <h3 class="panel-title">Ontology Details</h3>
             </div>
-            <div class="panel-body">
-              Panel content
+            <div class="panel-body" id="ontoviz">
             </div>
           </div>
         </div>
       </div>
     </div> <!-- /ontoview grid -->
   </div> <!-- /container -->
+
 
 
     <!-- JavaScript
@@ -158,27 +181,34 @@
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/bootstrap-select.min.js"></script>
     <script src="js/lib/handlebars.js"></script>
+    <script src="js/lib/d3.min.js"></script>
     <!-- compiled templates -->
     <script src="js/templates.js"></script>
     <!-- app -->
     <script src="js/app.js"></script>
     <!-- models -->
     <script src="js/models/store.js"></script>
+    <script src="js/models/ontology.js"></script>
     <script src="js/models/concept.js"></script>
     <!-- collections -->
     <script src="js/collections/stores.js"></script>
+    <script src="js/collections/ontologies.js"></script>
     <script src="js/collections/concepts.js"></script>
     <!-- views -->
+    <script src="js/views/ontovisualization.js"></script>
     <script src="js/views/ontoview.js"></script>
     <script src="js/views/ontonew.js"></script>
+    <script src="js/views/ontoload.js"></script>
 
     <script src="js/routers/router.js"></script>
+
     <!-- init -->
     <script type="text/javascript">
       $(function() {
-          App.init();
-          });
-</script>
+        App.init();
+      });
+    </script>
+    
 
   </body>
 </html>
