Improved GUI functionality with fixes to backend.

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -66,23 +66,7 @@
           </ul>
         </div><!--/.nav-collapse -->
       </div>
-      <!-- OntoView: 
-      -->
-      <div class="row" id="ontoview" style="display: none">
-        <! -- 
-        MAIN AREA OF ONTOLOGY 
-        -->
-        <div class="panel panel-default">
-          <div class="panel-heading" id="main-heading">
-            <h3 class="panel-title">Ontology Details</h3>
-          </div>
-          <div class="panel-body" id="ontoviz">
-          </div>
-        </div>
-      </div>
-    </div> <!-- /ontoview grid -->
-  </div> <!-- /container -->
-
+    </div>
 
 
     <!-- JavaScript
@@ -101,6 +85,7 @@
     <!-- app -->
     <script src="js/app.js"></script>
     <!-- models -->
+    <script src="js/models/selected.js"></script>
     <script src="js/models/store.js"></script>
     <script src="js/models/ontology.js"></script>
     <script src="js/models/concept.js"></script>
