Beggining of AL and Visualization selection

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -85,6 +85,7 @@
     <!-- app -->
     <script src="js/app.js"></script>
     <!-- models -->
+    <script src="js/models/visualizationoptions.js"></script>
     <script src="js/models/selected.js"></script>
     <script src="js/models/store.js"></script>
     <script src="js/models/ontology.js"></script>
