AL Questions and Answers implemented.

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -90,6 +90,7 @@
     <script src="js/models/store.js"></script>
     <script src="js/models/ontology.js"></script>
     <script src="js/models/concept.js"></script>
+    <script src="js/models/al.js"></script>
     <!-- collections -->
     <script src="js/collections/stores.js"></script>
     <script src="js/collections/ontologies.js"></script>
