Simple Query, download visualization button. Server implementation of keyword suggestion.

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -56,9 +56,6 @@
               <li><a href="unimplemented/">Import Data Into Ontology</a></li>
               <li class="divider"></li>
               <li><a href="unimplemented/">Export Data</a></li>
-              <li><a href="unimplemented/">Export Classifier</a></li>
-              <li class="divider"></li>
-              <li><a href="#export-visualization">Export Visualization</a></li>
             </ul>
             </li>
             <li class="dropdown">
@@ -69,8 +66,7 @@
               <li class="divider"></li>
               <li><a href="unimplemented/">Classifier</a></li>
               <li class="divider"></li>
-              <li><a href="#export-viz">SVG</a></li>
-              <li><a href="uninplemented">PNG</a></li>
+              <li><a href="#export-viz">Visualization</a></li>
             </ul>
             </li>
 
