Implement view documents. bug fixes. cosmetic changes.

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -19,6 +19,9 @@
 
     <!-- TreeView   <link href="css/treeview.css" rel="stylesheet"> -->
 
+    <!-- Font Awesome   
+    <link rel="stylesheet" href="css/font-awesome.min.css"> -->
+
     <!-- Custom OntoGen style (re)definitions -->
     <link href="css/ontogen.css" rel="stylesheet">
 
@@ -64,11 +67,9 @@
               <li><a href="unimplemented/">OWL</a></li>
               <li><a href="unimplemented/">Proton</a></li>
               <li class="divider"></li>
-              <li><a href="unimplemented/">Classifier</a></li>
-              <li class="divider"></li>
-              <li><a href="#export-viz">Visualization</a></li>
             </ul>
             </li>
+            <li><a href="unimplemented">Classifiers</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
@@ -80,8 +81,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- Could be all concatenated together to make a single file -->
-    <script src="js/lib/underscore.min.js"></script>
-    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/underscore-min.js"></script>
+    <script src="js/lib/jquery-2.1.0.min.js"></script>
     <script src="js/lib/backbone-min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/bootstrap-select.min.js"></script>
