Sub-concepts from classifying a concept.

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -101,11 +101,13 @@
     <script src="js/models/concept.js"></script>
     <script src="js/models/document.js"></script>
     <script src="js/models/al.js"></script>
+    <script src="js/models/classifier.js"></script>
     <!-- collections -->
     <script src="js/collections/stores.js"></script>
     <script src="js/collections/ontologies.js"></script>
     <script src="js/collections/concepts.js"></script>
     <script src="js/collections/documents.js"></script>
+    <script src="js/collections/classifiers.js"></script>
     <!-- views -->
     <script src="js/views/ontovisualization.js"></script>
     <script src="js/views/ontoview.js"></script>
