--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -49,27 +49,29 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="../admin/">QMiner</a></li>
+            <!--<li><a href="../admin/">QMiner</a></li>-->
             <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ontology<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#ontonew">New</a></li>
               <li><a href="#ontoload">Load</a></li>
+              <!--
               <li class="divider"></li>
               <li><a href="unimplemented/">Import Data Into Ontology</a></li>
               <li class="divider"></li>
               <li><a href="unimplemented/">Export Data</a></li>
+              -->
             </ul>
             </li>
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Export<b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Data<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="unimplemented/">OWL</a></li>
-              <li><a href="unimplemented/">Proton</a></li>
-              <li class="divider"></li>
+              <li><a href="#storefromdata">Store From Dataset</a></li>
+              <!--<li><a href="unimplemented/">Import Into Store</a></li>
+              <li class="divider"></li> -->
             </ul>
             </li>
-            <li><a href="unimplemented">Classifiers</a></li>
+            <li><a href="#classifiers">Classifiers</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
@@ -113,6 +115,8 @@
     <script src="js/views/ontoview.js"></script>
     <script src="js/views/ontonew.js"></script>
     <script src="js/views/ontoload.js"></script>
+    <script src="js/views/classifiers.js"></script>
+    <script src="js/views/storefromdata.js"></script>
 
     <script src="js/routers/router.js"></script>
 
