Loading indicator in buttons. Other stuff which I forgot to commit before...

--- a/ontogen/index.html
+++ b/ontogen/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Luis Rei (luis.rei@ijs.si), Josef Stefan Institute.">
 
     <title>OntoGen - QMiner</title>
 
@@ -85,6 +85,7 @@
     <!-- Could be all concatenated together to make a single file -->
     <script src="js/lib/underscore-min.js"></script>
     <script src="js/lib/jquery-2.1.0.min.js"></script>
+    <script src="js/lib/jquery.csv-0.71.min.js"></script>
     <script src="js/lib/backbone-min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/bootstrap-select.min.js"></script>
