--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p class="header">A semi-automatic, collaborative, data exploration and organization tool and API.</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/lrei/ontogen/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/lrei/ontogen/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/lrei/ontogen">View On GitHub</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/lrei/elycite/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/lrei/elycite/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/lrei/elycite">View On GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/lrei">lrei</a></p>
@@ -31,17 +31,60 @@
       </header>
       <section>
         <h1>
-<a name="ontogen-version-3" class="anchor" href="#ontogen-version-3"><span class="octicon octicon-link"></span></a>Ontogen Version 3</h1>
+<a name="elycite" class="anchor" href="#elycite"><span class="octicon octicon-link"></span></a>Elycite</h1>
 
 <h2>
 <a name="description" class="anchor" href="#description"><span class="octicon octicon-link"></span></a>Description</h2>
 
-<p>TBA</p>
+<p>Elycite is  semi-automatic, collaborative, data exploration and organization tool.
+The current version is focused on text data.</p>
+
+<p>elycite integrates machine learning and text mining algorithms into a
+simple user interface and a Client/Server architecture.</p>
+
+<p>Built on top of <a href="http://qminer.ijs.si">QMiner</a>.</p>
+
+<p>Based on <a href="http://ontogen.ijs.si">ontogen</a> - a semi-automatic ontology editor by
+Blaz Fortuna, Marko Grobelnik and Dunja Mladenic.</p>
+
+<p>The main features include:</p>
+
+<ul>
+<li>Unsupervised and supervised methods for concept suggestion</li>
+<li>Data visualizations</li>
+<li>Machine Learning As A Service (MLAAS) - both data and methods are available 
+to other applications through via an API (RESTful).</li>
+</ul><p>Current automatic methods include:</p>
+
+<ul>
+<li>Support Vector Machine (SVM) for classification</li>
+<li>Active Learning with SVMs</li>
+<li>K-means++ clustering</li>
+<li>Keyword extracion using K-means and TF/IDF</li>
+</ul><h2>
+<a name="roadmap-highlights" class="anchor" href="#roadmap-highlights"><span class="octicon octicon-link"></span></a>Roadmap Highlights</h2>
+
+<ul>
+<li>Multi-field methods with non textual data (coming soon)</li>
+<li>Allow training supervised classifiers, possibly from different stores
+display pretty confusion matrix (coming soon)</li>
+<li>Pre-built classifiers for common tasks</li>
+<li>Integrated data collection</li>
+<li>Time Series data and associated methods</li>
+</ul><h2>
+<a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h2>
+
+<p><a href="http://luisrei.com">Luis Rei</a></p>
+
+<p>Advisors: <a href="http://blazfortuna.com">Blaz Fortuna</a>, Dunja Mladenic and 
+Marko Grobelnik</p>
+
+<p><a href="http://ailab.ijs.si">AI Lab</a>, Josef Stefan Institute</p>
 
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>Copyright (c) 2014 Jozef Stefan Institute</p>
+<p>(C) 2013-2014 Luis Rei, Josef Stefan Institute</p>
 
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
