--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li class="download"><a class="buttons" href="https://github.com/lrei/elycite/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/lrei/elycite/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/lrei/elycite">View On GitHub</a></li>
-           <li><a class="header" href="https://github.com/qminer/qminer">QMiner On GitHub</a></li>
+           <li><a class="buttons github" href="https://github.com/qminer/qminer">QMiner On GitHub</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="http://luisrei.com">Luis Rei</a></p>
