Add records to datastore implemented in API. Store From Data splits data into multiple requests. Close #2

--- a/elycite/index.html
+++ b/elycite/index.html
@@ -100,6 +100,7 @@
     <script src="js/models/visualizationoptions.js"></script>
     <script src="js/models/selected.js"></script>
     <script src="js/models/store.js"></script>
+    <script src="js/models/record.js"></script>
     <script src="js/models/ontology.js"></script>
     <script src="js/models/concept.js"></script>
     <script src="js/models/document.js"></script>
@@ -107,6 +108,7 @@
     <script src="js/models/classifier.js"></script>
     <!-- collections -->
     <script src="js/collections/stores.js"></script>
+    <script src="js/collections/records.js"></script>
     <script src="js/collections/ontologies.js"></script>
     <script src="js/collections/concepts.js"></script>
     <script src="js/collections/documents.js"></script>
