fix for join issue in suggest concepts. miscellaneous client stuff

--- a/elycite/index.html
+++ b/elycite/index.html
@@ -55,6 +55,7 @@
             <ul class="dropdown-menu">
               <li><a href="#ontonew">New</a></li>
               <li><a href="#ontoload">Load</a></li>
+              <li><a href="#export">Export</a></li>
               <!--
               <li class="divider"></li>
               <li><a href="unimplemented/">Import Data Into Ontology</a></li>
@@ -117,6 +118,7 @@
     <script src="js/views/ontovisualization.js"></script>
     <script src="js/views/ontoview.js"></script>
     <script src="js/views/ontonew.js"></script>
+    <script src="js/views/ontoexport.js"></script>
     <script src="js/views/ontoload.js"></script>
     <script src="js/views/classifiers.js"></script>
     <script src="js/views/storefromdata.js"></script>
